# PoetryTest

easystat/: pyproject.toml
easystat/src/easystat/: shortcuts.py
easystat/tests/: try_shortcuts.py
