[tool.poetry]
name = "easystat"
version = "0.1.0"
description = ""
authors = ["Kevin-Veenboer <135600479+Kevin-Veenboer@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "easystat", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
